http2-ssl-passthrough/springboot-service.yml
apiVersion: v1
kind: Service
metadata:
  name: springboot-http2
  labels:
    service: springboot-http2
spec:
  selector:
    app: springboot-http2
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  - name: https
    protocol: TCP
    port: 443
    targetPort: 8443
