http2-ssl-passthrough/springboot-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: spring-http2-ingress
  annotations:
    ingress.citrix.com/ssl-passthrough: "True"
spec:
  tls:
  - hosts:
    - springboot-http2.hung.org.hk
    secretName: test-selfsigned-secret
  rules:
  - host: springboot-http2.hung.org.hk
    http:
      paths:
      - backend:
          serviceName: springboot-http2
          servicePort: https
